--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <nav class="nav container">
         <div class="nav__data">
           <a href="#" class="nav__logo">
-            <i class="ri-planet-line"></i> Company
+            <img src="build/img/menulogo.svg" alt="" />
           </a>
 
           <div class="nav__toggle" id="nav-toggle">
@@ -120,6 +120,16 @@
         </div>
       </nav>
     </header>
+
+    <section>
+      <h1>hola mundoi</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+        temporibus aperiam modi atque aut dolores. Quas non sapiente ipsa optio
+        iure fugiat ut velit quibusdam repudiandae ipsam. Repellat, incidunt
+        odio.
+      </p>
+    </section>
 
     <!--=============== MAIN JS ===============-->
     <script src="build/js/main.js"></script>
