--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="build/css/app.css" />
@@ -21,7 +25,7 @@
       <nav class="nav container">
         <div class="nav__data">
           <a href="#" class="nav__logo">
-            <img src="build/img/menulogo.svg" alt="" />
+            <img src="build/img/menulogo.svg" alt="" class="logo" />
           </a>
 
           <div class="nav__toggle" id="nav-toggle">
@@ -33,103 +37,254 @@
         <!--=============== NAV MENU ===============-->
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
-            <li><a href="#" class="nav__link">Home</a></li>
+            <li><a href="#" class="nav__link">Inicio</a></li>
 
-            <li><a href="#" class="nav__link">Company</a></li>
+            <li><a href="#" class="nav__link">Sectores</a></li>
 
             <!--=============== DROPDOWN 1 ===============-->
             <li class="dropdown__item">
               <div class="nav__link">
-                Analytics <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                Conceptos <i class="ri-arrow-down-s-line dropdown__arrow"></i>
               </div>
 
               <ul class="dropdown__menu">
                 <li>
-                  <a href="#" class="dropdown__link">
-                    <i class="ri-pie-chart-line"></i> Overview
-                  </a>
+                  <a href="#" class="dropdown__link"> Concepto </a>
                 </li>
 
                 <li>
-                  <a href="#" class="dropdown__link">
-                    <i class="ri-arrow-up-down-line"></i> Transactions
-                  </a>
+                  <a href="#" class="dropdown__link"> Concepto </a>
                 </li>
 
                 <!--=============== DROPDOWN SUBMENU ===============-->
                 <li class="dropdown__subitem">
                   <div class="dropdown__link">
-                    <i class="ri-bar-chart-line"></i> Reports
+                    Conceptos
                     <i class="ri-add-line dropdown__add"></i>
                   </div>
 
                   <ul class="dropdown__submenu">
                     <li>
-                      <a href="#" class="dropdown__sublink">
-                        <i class="ri-file-list-line"></i> Documents
-                      </a>
+                      <a href="#" class="dropdown__sublink"> Concepto </a>
                     </li>
 
                     <li>
-                      <a href="#" class="dropdown__sublink">
-                        <i class="ri-cash-line"></i> Payments
-                      </a>
+                      <a href="#" class="dropdown__sublink"> Concepto </a>
                     </li>
 
                     <li>
-                      <a href="#" class="dropdown__sublink">
-                        <i class="ri-refund-2-line"></i> Refunds
-                      </a>
+                      <a href="#" class="dropdown__sublink"> Concepto </a>
                     </li>
                   </ul>
                 </li>
               </ul>
             </li>
 
-            <li><a href="#" class="nav__link">Products</a></li>
+            <li><a href="#" class="nav__link">Productos</a></li>
+            <li><a href="#" class="nav__link">CLientes Proyectos</a></li>
 
             <!--=============== DROPDOWN 2 ===============-->
             <li class="dropdown__item">
               <div class="nav__link">
-                Users <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                Control de Ruido
+                <i class="ri-arrow-down-s-line dropdown__arrow"></i>
               </div>
 
               <ul class="dropdown__menu">
                 <li>
-                  <a href="#" class="dropdown__link">
-                    <i class="ri-user-line"></i> Profiles
-                  </a>
+                  <a href="#" class="dropdown__link"> Control </a>
                 </li>
 
                 <li>
-                  <a href="#" class="dropdown__link">
-                    <i class="ri-lock-line"></i> Accounts
-                  </a>
+                  <a href="#" class="dropdown__link"> Control </a>
                 </li>
 
                 <li>
-                  <a href="#" class="dropdown__link">
-                    <i class="ri-message-3-line"></i> Messages
-                  </a>
+                  <a href="#" class="dropdown__link"> Control </a>
                 </li>
               </ul>
             </li>
 
-            <li><a href="#" class="nav__link">Contact</a></li>
+            <li><a href="#" class="nav__link">Contacto</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <section>
-      <h1>hola mundoi</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-        temporibus aperiam modi atque aut dolores. Quas non sapiente ipsa optio
-        iure fugiat ut velit quibusdam repudiandae ipsam. Repellat, incidunt
-        odio.
+    <section class="inicio container">
+      <h1 class="inicio__heading">Acustica Integral</h1>
+      <p class="inicio__parrafo">
+        Fabricación, diseño, comercialización e instalación de materiales
+        acústicos, sistemas de insonorización y servicios de ingeniería
+        acústica. Disponemos de la experiencia necesaria para resolver todos los
+        problemas de ruido.
       </p>
     </section>
+
+    <main class="sectores">
+      <h2 class="sectores__heading">Sectores</h2>
+
+      <div class="sectores__grid container">
+        <div class="sector">
+          <img src="build/img/industria.avif" alt="industria" />
+          <div class="sector__informacion">
+            <h3 class="sector__informacion-heading">Industria</h3>
+            <p class="sector__informacion-parrafo">
+              Adaptamos nuestras soluciones a concretos procesos de producción
+              para cada industria. Intervenimos máquina a máquina.
+            </p>
+          </div>
+        </div>
+        <div class="sector">
+          <img src="build/img/construccion.avif" alt="Construcción" />
+          <div class="sector__informacion">
+            <h3 class="sector__informacion-heading">Construcción</h3>
+            <p class="sector__informacion-parrafo">
+              Ayudamos a profesionales en sus proyectos, arquitéctos,
+              ingenieros...
+            </p>
+          </div>
+        </div>
+        <div class="sector">
+          <img src="build/img/massmedia.avif" alt="Mass Media" />
+          <div class="sector__informacion">
+            <h3 class="sector__informacion-heading">Mass Media</h3>
+            <p class="sector__informacion-parrafo">
+              Instalaciones llave en mano para estudios de TV, estaciones de
+              radio, estudios de doblaje y post-producción, music halls, home
+              cinema...
+            </p>
+          </div>
+        </div>
+        <div class="sector">
+          <img src="build/img/integral.avif" alt="Integral" />
+          <div class="sector__informacion">
+            <h3 class="sector__informacion-heading">Integral</h3>
+            <p class="sector__informacion-parrafo">
+              Nos preocupamos por el control del sonido y vibraciones en el
+              exterior, y trabajamos para solventar problemas de contaminación
+              acústica.
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <section class="conceptos">
+      <h2 class="conceptos__heading">Conceptos de Acústica</h2>
+
+      <div class="conceptos__grid container">
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/sonidoruido.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>El Sonido y El Ruido</h3>
+            <p>
+              Cuando se habla de ruido, a menudo se piensa en una sensación
+              sonora molesta o en caso extremo incluso dolorosa. Desde el punto
+              de vista físico, un ruido es una mezcla compleja de sonidos...
+            </p>
+          </div>
+        </div>
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/sonidoruido.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>El Sonido y El Ruido</h3>
+            <p>
+              Cuando se habla de ruido, a menudo se piensa en una sensación
+              sonora molesta o en caso extremo incluso dolorosa. Desde el punto
+              de vista físico, un ruido es una mezcla compleja de sonidos...
+            </p>
+          </div>
+        </div>
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/sonidoruido.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>El Sonido y El Ruido</h3>
+            <p>
+              Cuando se habla de ruido, a menudo se piensa en una sensación
+              sonora molesta o en caso extremo incluso dolorosa. Desde el punto
+              de vista físico, un ruido es una mezcla compleja de sonidos...
+            </p>
+          </div>
+        </div>
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/sonidoruido.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>El Sonido y El Ruido</h3>
+            <p>
+              Cuando se habla de ruido, a menudo se piensa en una sensación
+              sonora molesta o en caso extremo incluso dolorosa. Desde el punto
+              de vista físico, un ruido es una mezcla compleja de sonidos...
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="productos container">
+      <h2 class="productos__heading">¡UNA GAMA DIVERSA DE PRODUCTOS!</h2>
+      <div class="productos__grid">
+        <div class="producto">
+          <div class="producto__imagen">
+            <img src="build/img/absorbentes.avif" alt="" />
+          </div>
+          <h3 class="producto__heading">Absorbentes</h3>
+          <p class="producto__parrafo">
+            La misión de los materiales absorbentes acústicos es evitar la
+            reflexión del sonido que incide sobre ellos.
+          </p>
+        </div>
+        <div class="producto">
+          <div class="producto__imagen">
+            <img src="build/img/aislantes.avif" alt="" />
+          </div>
+          <h3 class="producto__heading">Absorbentes</h3>
+          <p class="producto__parrafo">
+            La misión de los materiales absorbentes acústicos es evitar la
+            reflexión del sonido que incide sobre ellos.
+          </p>
+        </div>
+        <div class="producto">
+          <div class="producto__imagen">
+            <img src="build/img/barreras.avif" alt="" />
+          </div>
+          <h3 class="producto__heading">Absorbentes</h3>
+          <p class="producto__parrafo">
+            La misión de los materiales absorbentes acústicos es evitar la
+            reflexión del sonido que incide sobre ellos.
+          </p>
+        </div>
+      </div>
+      <div class="productos__boton">
+        <a href="#">Ver Más</a>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__contacto container">
+        <h2 class="footer__heading">Contacto</h2>
+        <p class="footer__telefono">Telefono: +52 5558615137</p>
+        <p class="footer__direccion">
+          DIR :- Av. Quetzal 84 lt 1, Lomas del Bosque | Cuautitlan Izcalli,
+          Estado de México.
+        </p>
+        <p class="footer__email">EMAIL :- info@acusticaintegral.com.mx</p>
+        <p class="footer__copy">
+          Importaciones Internacionales EKL SA de CV, importador y distribuidor
+          exclusivo en México de Acústica Integral S.L.
+          info@eklinternacional.com todas las imágenes y productos en esta
+          página pertencen a Acústica Integral S.L. www.acusticaintegral.com
+        </p>
+      </div>
+    </footer>
 
     <!--=============== MAIN JS ===============-->
     <script src="build/js/main.js"></script>
