--- a/conceptos.html
+++ b/conceptos.html
@@ -110,136 +110,121 @@
       </nav>
     </header>
 
-    <section class="inicio container">
-      <h1 class="inicio__heading">Acustica Integral</h1>
-      <p class="inicio__parrafo">
-        Fabricación, diseño, comercialización e instalación de materiales
-        acústicos, sistemas de insonorización y servicios de ingeniería
-        acústica. Disponemos de la experiencia necesaria para resolver todos los
-        problemas de ruido.
-      </p>
-    </section>
+    <main class="conceptos">
+      <h1 class="conceptos__heading">Conceptos de Acústica</h1>
 
-    <main class="sectores-inicio">
-      <h2 class="sectores-inicio__heading">Sectores</h2>
-
-      <div class="sectores-inicio__grid container">
-        <div class="sector-inicio">
-          <img src="build/img/industria.avif" alt="industria" />
-          <div class="sector-inicio__informacion">
-            <h3 class="sector-inicio__informacion-heading">Industria</h3>
-            <p class="sector-inicio__informacion-parrafo">
-              Adaptamos nuestras soluciones a concretos procesos de producción
-              para cada industria. Intervenimos máquina a máquina.
+      <div class="conceptos__grid container">
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/conceptos.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>Conceptos de Acústica</h3>
+            <p>
+              En este apartado damos a conocer algunos conceptos básicos de
+              acústica. Muchos de nuestros Clientes son profesionales del sector
+              y no les ayudará mucho, pero es posible que en determinadas
+              ocasiones pueda servir de recordatorio algunos de los términos
+              aquí explicados. En cualquier caso ponemos a disposición esta
+              herramienta de consulta básica para completar o recordar los
+              conocimientos básicos en el campo de la acústica.
             </p>
           </div>
         </div>
-        <div class="sector-inicio">
-          <img src="build/img/construccion.avif" alt="Construcción" />
-          <div class="sector-inicio__informacion">
-            <h3 class="sector-inicio__informacion-heading">Construcción</h3>
-            <p class="sector-inicio__informacion-parrafo">
-              Ayudamos a profesionales en sus proyectos, arquitéctos,
-              ingenieros...
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/sonidoruido.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>El Sonido y el Ruido</h3>
+            <p>
+              Cuando se habla de ruido, a menudo se piensa en una sensación
+              sonora molesta o en caso extremo incluso dolorosa. Desde el punto
+              de vista físico, un ruido es una mezcla compleja de sonidos de
+              varias frecuencias y en general se distinguen: los ruidos
+              estacionarios, que prácticamente no tienen fluctuaciones en
+              función del tiempo, y los ruidos no estacionarios, que presentan
+              fluctuaciones más o menos fuertes.
             </p>
           </div>
         </div>
-        <div class="sector-inicio">
-          <img src="build/img/massmedia.avif" alt="Mass Media" />
-          <div class="sector-inicio__informacion">
-            <h3 class="sector-inicio__informacion-heading">Mass Media</h3>
-            <p class="sector-inicio__informacion-parrafo">
-              Instalaciones llave en mano para estudios de TV, estaciones de
-              radio, estudios de doblaje y post-producción, music halls, home
-              cinema...
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/presion.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>Presión sonora</h3>
+            <p>
+              El sonido es una sensación auditiva provocada por las vibraciones
+              y ondas acústicas de frecuencia entre 20 Hz y 20.000 Hz., que se
+              propagan en un medio sólido, líquido o gaseoso. Contrariamente a
+              las ondas electromagnéticas (ondas luminosas, ondas de radio,
+              etc.), el sonido para propagarse tiene necesidad de un medio, no
+              se propaga en el vacío. Cuando las frecuencias de excitación del
+              fenómeno acústico son inferiores a 20 Hz. se habla de
+              infrasonidos. Cuando son superiores a 20.000 Hz., de ultrasonidos.
             </p>
           </div>
         </div>
-        <div class="sector-inicio">
-          <img src="build/img/integral.avif" alt="Integral" />
-          <div class="sector-inicio__informacion">
-            <h3 class="sector-inicio__informacion-heading">Integral</h3>
-            <p class="sector-inicio__informacion-parrafo">
-              Nos preocupamos por el control del sonido y vibraciones en el
-              exterior, y trabajamos para solventar problemas de contaminación
-              acústica.
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/potencia.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>Potencia acústica</h3>
+            <p>
+              Para caracterizar la emisión sonora de una fuente de ruido,
+              generalmente se da su potencia. Se corresponde con la cantidad de
+              energía radiada por unidad de tiempo y se expresa en Vatios. La
+              potencia es un parámetro intrínseco de la fuente de ruido al igual
+              que lo es la potencia eléctrica de una bombilla. El valor de la
+              potencia de la bombilla no es variable según el color de las
+              paredes de la habitación donde se encuentre, en cambio, la
+              iluminación será mayor en una habitación con las paredes pintadas
+              de blanco que en una habitación con las paredes pintadas de negro.
+              Lo mismo sucede con la presión, dependiendo si la fuente de ruido
+              se encuentra en campo libre o bien se encuentra en campo
+              reverberante.
+            </p>
+          </div>
+        </div>
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/frecuencia.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>Frecuencia (Hz)</h3>
+            <p>
+              El número de veces que tiene ligar una compresión-dilatación del
+              aire por unidad de tiempo (segundos) es lo que se define como la
+              frecuencia. A mayor número de repeticiones, mayor frecuencia
+              (altas frecuencias o agudos). A menor número de repeticiones,
+              frecuencia menor (bajas frecuencias o bajos). Entre los bajos y
+              los agudos están los medios, o como bien puede deducirse, las
+              medias frecuencias.
+            </p>
+          </div>
+        </div>
+        <div class="concepto">
+          <div class="imagen">
+            <img src="build/img/espectros.avif" alt="" />
+          </div>
+          <div class="contenido">
+            <h3>Espectros</h3>
+            <p>
+              El ruido, como cualquier función f(x) ó f(t), puede ser
+              descompuesto mediante la transformada de Fourier en una serie
+              convergente de términos cuyos sumandos se corresponden con cada
+              una de las componentes frecuenciales de la señal. Cada sumando va
+              multiplicado por una constante: la amplitud. El estudio de las
+              componentes frecuenciales de un ruido se denomina en acústica
+              Análisis Frecuencial y el resultado de la transformada de Fourier
+              es el espectro de la señal.
             </p>
           </div>
         </div>
       </div>
     </main>
-
-    <section class="conceptos-inicio">
-      <h2 class="conceptos-inicio__heading">Conceptos de Acústica</h2>
-
-      <div class="conceptos-inicio__grid container">
-        <div class="concepto-inicio">
-          <div class="imagen">
-            <img src="build/img/sonidoruido.avif" alt="" />
-          </div>
-          <div class="contenido">
-            <h3>El Sonido y El Ruido</h3>
-            <p>
-              Cuando se habla de ruido, a menudo se piensa en una sensación
-              sonora molesta o en caso extremo incluso dolorosa. Desde el punto
-              de vista físico, un ruido es una mezcla compleja de sonidos...
-            </p>
-          </div>
-        </div>
-        <div class="concepto-inicio">
-          <div class="imagen">
-            <img src="build/img/oscilogramas.avif" alt="" />
-          </div>
-          <div class="contenido">
-            <h3>Oscilogramas</h3>
-            <p>
-              El oscilograma de un ruido o de un sonido representa la variación
-              de la presión sonora en función del tiempo. Normalmente se trata
-              de la presión instantánea y no de la presión eficaz.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="productos container">
-      <h2 class="productos__heading">¡UNA GAMA DIVERSA DE PRODUCTOS!</h2>
-      <div class="productos__grid">
-        <div class="producto">
-          <div class="producto__imagen">
-            <img src="build/img/absorbentes.avif" alt="" />
-          </div>
-          <h3 class="producto__heading">Absorbentes</h3>
-          <p class="producto__parrafo">
-            La misión de los materiales absorbentes acústicos es evitar la
-            reflexión del sonido que incide sobre ellos.
-          </p>
-        </div>
-        <div class="producto">
-          <div class="producto__imagen">
-            <img src="build/img/aislantes.avif" alt="" />
-          </div>
-          <h3 class="producto__heading">Aislantes</h3>
-          <p class="producto__parrafo">
-            La misión de los materiales absorbentes acústicos es evitar la
-            reflexión del sonido que incide sobre ellos.
-          </p>
-        </div>
-        <div class="producto">
-          <div class="producto__imagen">
-            <img src="build/img/barreras.avif" alt="" />
-          </div>
-          <h3 class="producto__heading">Barreras</h3>
-          <p class="producto__parrafo">
-            La misión de los materiales absorbentes acústicos es evitar la
-            reflexión del sonido que incide sobre ellos.
-          </p>
-        </div>
-      </div>
-      <div class="productos__boton">
-        <a href="#">Ver Más</a>
-      </div>
-    </section>
 
     <footer class="footer">
       <div class="footer__contacto container">
