--- a/conctacto.html
+++ b/conctacto.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--=============== REMIXICONS ===============-->
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -14,13 +13,11 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
-    <!--=============== CSS ===============-->
     <link rel="stylesheet" href="build/css/app.css" />
 
-    <title>Responsive dropdown menu - Bedimcode</title>
+    <title>Acustica Integral</title>
   </head>
   <body>
-    <!--=============== HEADER ===============-->
     <header class="header">
       <nav class="nav container">
         <div class="nav__data">
@@ -34,14 +31,12 @@
           </div>
         </div>
 
-        <!--=============== NAV MENU ===============-->
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
-            <li><a href="#" class="nav__link">Inicio</a></li>
+            <li><a href="index.html" class="nav__link">Inicio</a></li>
 
-            <li><a href="#" class="nav__link">Sectores</a></li>
+            <li><a href="sectores.html" class="nav__link">Sectores</a></li>
 
-            <!--=============== DROPDOWN 1 ===============-->
             <li class="dropdown__item">
               <div class="nav__link">
                 Conceptos <i class="ri-arrow-down-s-line dropdown__arrow"></i>
@@ -56,7 +51,6 @@
                   <a href="#" class="dropdown__link"> Concepto </a>
                 </li>
 
-                <!--=============== DROPDOWN SUBMENU ===============-->
                 <li class="dropdown__subitem">
                   <div class="dropdown__link">
                     Conceptos
@@ -81,9 +75,8 @@
             </li>
 
             <li><a href="#" class="nav__link">Productos</a></li>
-            <li><a href="#" class="nav__link">CLientes Proyectos</a></li>
+            <li><a href="#" class="nav__link">Clientes Proyectos</a></li>
 
-            <!--=============== DROPDOWN 2 ===============-->
             <li class="dropdown__item">
               <div class="nav__link">
                 Control de Ruido
@@ -105,7 +98,7 @@
               </ul>
             </li>
 
-            <li><a href="#" class="nav__link">Contacto</a></li>
+            <li><a href="conctacto.html" class="nav__link">Contacto</a></li>
           </ul>
         </div>
       </nav>
