--- a/sectores.html
+++ b/sectores.html
@@ -17,10 +17,9 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="build/css/app.css" />
 
-    <title>Responsive dropdown menu - Bedimcode</title>
+    <title>Acustica Integral</title>
   </head>
   <body>
-    <!--=============== HEADER ===============-->
     <header class="header">
       <nav class="nav container">
         <div class="nav__data">
@@ -37,9 +36,9 @@
         <!--=============== NAV MENU ===============-->
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
-            <li><a href="#" class="nav__link">Inicio</a></li>
+            <li><a href="index.html" class="nav__link">Inicio</a></li>
 
-            <li><a href="#" class="nav__link">Sectores</a></li>
+            <li><a href="sectores.html" class="nav__link">Sectores</a></li>
 
             <!--=============== DROPDOWN 1 ===============-->
             <li class="dropdown__item">
@@ -81,7 +80,7 @@
             </li>
 
             <li><a href="#" class="nav__link">Productos</a></li>
-            <li><a href="#" class="nav__link">CLientes Proyectos</a></li>
+            <li><a href="#" class="nav__link">Clientes Proyectos</a></li>
 
             <!--=============== DROPDOWN 2 ===============-->
             <li class="dropdown__item">
@@ -105,7 +104,7 @@
               </ul>
             </li>
 
-            <li><a href="#" class="nav__link">Contacto</a></li>
+            <li><a href="conctacto.html" class="nav__link">Contacto</a></li>
           </ul>
         </div>
       </nav>
@@ -118,43 +117,133 @@
         <div class="sector">
           <img src="build/img/industria.avif" alt="industria" />
           <div class="sector__informacion">
-            <h3 class="sector__informacion-heading">Industria</h3>
+            <h3 class="sector__informacion-heading">Acústica Industrial</h3>
             <p class="sector__informacion-parrafo">
-              Adaptamos nuestras soluciones a concretos procesos de producción
-              para cada industria. Intervenimos máquina a máquina.
+              Ponemos a su disposición nuestra ingeniería acústica para el
+              ensayo de cualquier tipo de producto o montaje que sea de su
+              interés. Un completo sistema de control de calidad de productos e
+              instalaciones tienen por objetivo la realización de estudios,
+              medidas acústicas, cálculos y análisis de los resultados obtenidos
+              y diseño de la solución más adecuada a cualquier problema de ruido
+              que se nos plantee.
             </p>
+            <ul class="sector__lista">
+              <li class="sector__elemento">Mejora acústica en el diseño</li>
+              <li class="sector__elemento">Piezas a medida</li>
+              <li class="sector__elemento">Ruido de máquinas</li>
+              <li class="sector__elemento">Transmisión de vibraciones</li>
+              <li class="sector__elemento">Separación de zonas</li>
+              <li class="sector__elemento">Cabinas audiométricas</li>
+              <li class="sector__elemento">Protección a los trabajadores</li>
+              <li class="sector__elemento">Sistemas de ventilación</li>
+              <li class="sector__elemento">Escapes de aire comprimido</li>
+              <li class="sector__elemento">Accesos a zonas ruidosas</li>
+            </ul>
+            <div class="sector__boton">
+              <a href="#">Descargar Informacion</a>
+            </div>
           </div>
         </div>
         <div class="sector">
-          <img src="build/img/construccion.avif" alt="Construcción" />
+          <img src="build/img/industria.avif" alt="industria" />
           <div class="sector__informacion">
-            <h3 class="sector__informacion-heading">Construcción</h3>
+            <h3 class="sector__informacion-heading">Construcción Acústica</h3>
             <p class="sector__informacion-parrafo">
-              Ayudamos a profesionales en sus proyectos, arquitéctos,
-              ingenieros...
+              Instalaciónes acústicas para el sector de la construcción,
+              asesoría en proyectos a profesionales. arquitectos y técnicos e
+              ingenieros. Suministro de los materiales más idóneos para evitar
+              transmisión de vibraciones y aislamientos acordes con la normativa
+              vigente. Suministro y montaje de instalaciones para: frío
+              industrial y comercial, climatización, locales comerciales con la
+              garantía de Acústica Integral, llave en mano.
             </p>
+            <ul class="sector__lista">
+              <li class="sector__elemento">Asesoramiento a profesionales</li>
+              <li class="sector__elemento">Ingeniería acústica</li>
+              <li class="sector__elemento">Estudios acústicos</li>
+              <li class="sector__elemento">Aislamientos acústicos</li>
+              <li class="sector__elemento">Climatización</li>
+              <li class="sector__elemento">Frío industrial</li>
+              <li class="sector__elemento">Frío comercial</li>
+              <li class="sector__elemento">Cuartos de máquinas</li>
+              <li class="sector__elemento">
+                Productos para aislamiento acústico
+              </li>
+              <li class="sector__elemento">Reverberación en oficinas</li>
+            </ul>
+            <div class="sector__boton">
+              <a href="#">Descargar Informacion</a>
+            </div>
           </div>
         </div>
         <div class="sector">
-          <img src="build/img/massmedia.avif" alt="Mass Media" />
+          <img src="build/img/industria.avif" alt="industria" />
           <div class="sector__informacion">
-            <h3 class="sector__informacion-heading">Mass Media</h3>
+            <h3 class="sector__informacion-heading">
+              Acústica Medios Audiovisuales
+            </h3>
             <p class="sector__informacion-parrafo">
-              Instalaciones llave en mano para estudios de TV, estaciones de
-              radio, estudios de doblaje y post-producción, music halls, home
-              cinema...
+              Diseñamos y desarrollamos proyectos de insonoración y aislamientos
+              acústicos, sabemos por experiencia que los recintos destinados al
+              servicio de radio, televisión, doblaje, cines, teatros, museos,
+              etc. precisan de una acústica interior perfecta. Es en este tipo
+              de recintos, cuando nos damos cuenta que una instalación correcta
+              y la correcta utilización de nuestros materiales crea una clara
+              armonía acústica difícil de superar.
             </p>
+            <ul class="sector__lista">
+              <li class="sector__elemento">Emisoras de radio</li>
+              <li class="sector__elemento">Escuelas de música</li>
+              <li class="sector__elemento">Estudios de sonido</li>
+              <li class="sector__elemento">Doblaje</li>
+              <li class="sector__elemento">Home-cinema</li>
+              <li class="sector__elemento">Salas de audición</li>
+              <li class="sector__elemento">Salas de ensayos</li>
+              <li class="sector__elemento">Salas polivalentes</li>
+              <li class="sector__elemento">Platós de TV</li>
+              <li class="sector__elemento">Post producción</li>
+            </ul>
+            <div class="sector__boton">
+              <a href="#">Descargar Informacion</a>
+            </div>
           </div>
         </div>
         <div class="sector">
-          <img src="build/img/integral.avif" alt="Integral" />
+          <img src="build/img/industria.avif" alt="industria" />
           <div class="sector__informacion">
-            <h3 class="sector__informacion-heading">Integral</h3>
+            <h3 class="sector__informacion-heading">
+              Acústica Integral México
+            </h3>
             <p class="sector__informacion-parrafo">
-              Nos preocupamos por el control del sonido y vibraciones en el
-              exterior, y trabajamos para solventar problemas de contaminación
-              acústica.
+              El departamento de proyectos se encarga de diseñar las soluciones
+              acústicas de aislamiento, acondicionamiento y vibraciones. La
+              labor desarrollada está apoyada en más de 10 años de experiencia
+              por parte del personal que compone la plantilla de Ingenieros
+              Acústicos y que se encargan de la elaboración de los pliegos de
+              soluciones constructivas de aplicación en cada una de las
+              situaciones planteadas por nuestros Clientes.
             </p>
+            <ul class="sector__lista">
+              <li class="sector__elemento">
+                Proyectos acústicos para nuevas actividades. Aislamiento y
+                acondicionamiento acústico
+              </li>
+              <li class="sector__elemento">
+                Proyectos de aislamiento acústico para la justificación de DB-HR
+                CTE en locales o edificio completo
+              </li>
+              <li class="sector__elemento">
+                Proyectos para el diseño del acondicionamiento acústico interior
+                de recintos. 3D. Acústica Arquitectónica
+              </li>
+              <li class="sector__elemento">
+                Estudios vibratorios a través de modelos BEM-FEM para el estudio
+                de soluciones antivibratorias sobre el terreno
+              </li>
+            </ul>
+            <div class="sector__boton">
+              <a href="#">Descargar Informacion</a>
+            </div>
           </div>
         </div>
       </div>
