--- a/productos.html
+++ b/productos.html
@@ -106,21 +106,10 @@
         </div>
       </nav>
     </header>
-    <h1 class="contacto__heading">Contacto</h1>
 
-    <main class="container">
-      <div class="contacto__formulario">
-        <div class="contacto__imagen"></div>
-        <div class="contacto__contenido">
-          <h2 class="contacto__heading">Coloca Tus Datos</h2>
-          <input type="text" class="contacto__input" placeholder="Nombre" />
-          <input type="text" class="contacto__input" placeholder="Correo" />
-          <input type="text" class="contacto__input" placeholder="Telefono" />
-          <textarea placeholder="Mensaje" class="contacto__textarea"></textarea>
-          <button class="contacto__boton">Enviar</button>
-        </div>
-      </div>
-    </main>
+    <h1 class="productos__heading">Productos</h1>
+
+    <main class="container"></main>
 
     <footer class="footer">
       <div class="footer__contacto container">
