--- a/sectores.html
+++ b/sectores.html
@@ -23,7 +23,7 @@
     <header class="header">
       <nav class="nav container">
         <div class="nav__data">
-          <a href="#" class="nav__logo">
+          <a href="index.html" class="nav__logo">
             <img src="build/img/menulogo.svg" alt="" class="logo" />
           </a>
 
@@ -38,68 +38,67 @@
           <ul class="nav__list">
             <li><a href="index.html" class="nav__link">Inicio</a></li>
 
-            <li><a href="sectores.html" class="nav__link">Sectores</a></li>
+            <li>
+              <a href="sectores.html" class="nav__link">Sectores</a>
+            </li>
+
+            <li><a href="conceptos.html" class="nav__link">Conceptos</a></li>
 
             <!--=============== DROPDOWN 1 ===============-->
-            <li class="dropdown__item">
+            <!-- <li class="dropdown__item">
               <div class="nav__link">
-                Conceptos <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+                Prodcutos <i class="ri-arrow-down-s-line dropdown__arrow"></i>
               </div>
 
               <ul class="dropdown__menu">
                 <li>
-                  <a href="#" class="dropdown__link"> Concepto </a>
+                  <a href="#" class="dropdown__link"> Prodcuto </a>
                 </li>
 
                 <li>
-                  <a href="#" class="dropdown__link"> Concepto </a>
-                </li>
+                  <a href="#" class="dropdown__link"> Prodcuto </a>
+                </li> -->
 
-                <!--=============== DROPDOWN SUBMENU ===============-->
-                <li class="dropdown__subitem">
+            <!--=============== DROPDOWN SUBMENU ===============-->
+            <!-- <li class="dropdown__subitem">
                   <div class="dropdown__link">
-                    Conceptos
+                    Productos
                     <i class="ri-add-line dropdown__add"></i>
                   </div>
 
                   <ul class="dropdown__submenu">
                     <li>
-                      <a href="#" class="dropdown__sublink"> Concepto </a>
+                      <a href="#" class="dropdown__sublink"> Producto </a>
                     </li>
 
                     <li>
-                      <a href="#" class="dropdown__sublink"> Concepto </a>
+                      <a href="#" class="dropdown__sublink"> Producto </a>
                     </li>
 
                     <li>
-                      <a href="#" class="dropdown__sublink"> Concepto </a>
+                      <a href="#" class="dropdown__sublink"> Producto </a>
                     </li>
                   </ul>
                 </li>
               </ul>
-            </li>
+            </li> -->
 
-            <li><a href="#" class="nav__link">Productos</a></li>
-            <li><a href="#" class="nav__link">Clientes Proyectos</a></li>
+            <li><a href="productos.html" class="nav__link">Productos</a></li>
 
             <!--=============== DROPDOWN 2 ===============-->
             <li class="dropdown__item">
               <div class="nav__link">
-                Control de Ruido
+                Clientes / Proyectos
                 <i class="ri-arrow-down-s-line dropdown__arrow"></i>
               </div>
 
               <ul class="dropdown__menu">
                 <li>
-                  <a href="#" class="dropdown__link"> Control </a>
+                  <a href="#" class="dropdown__link"> Clientes </a>
                 </li>
 
                 <li>
-                  <a href="#" class="dropdown__link"> Control </a>
-                </li>
-
-                <li>
-                  <a href="#" class="dropdown__link"> Control </a>
+                  <a href="#" class="dropdown__link"> Proyectos </a>
                 </li>
               </ul>
             </li>
